@@ -5,6 +5,7 @@
 	* Fix bug #46429: Empty Form after cancelling delete Form
 	* Fix issue #49426: addGlobalMarkers: wrong conditions
 	* Fix issue #37022: Empty form security token
+	* Fix issue #39069: Check pid of fe-users in function login (Thanks to Georg Schönweger)
 
 2016-06-29 Stanislas Rolland  <typo3(arobas)sjbr.ca>
 	* Fix bug #46080: BE log error after change PHP5.2 -> PHP5.3
